--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Angular 2 QuickStart</title>
+    <script src="../node_modules/es6-shim/es6-shim.js"></script>
     <script src="../node_modules/systemjs/dist/system.src.js"></script>
     <script src="../node_modules/angular2/bundles/angular2.dev.js"></script>
     <script>
